engine: add Config/ConfigBuilder extension mechanism (#2363)
* feat(engine): add Config/ConfigBuilder extension mechanism

Adds ConfigInfo, ConfigExtInfo, ConfigExtAdapter and a Config/ConfigBuilder
base pair so a config object owned by one module can carry a named,
optional value whose concrete type is supplied by an installed provider
module, without the defining module depending on the provider.

Wires the mechanism through ModelInfo/ModelExtInfo and the Avro/Json/
Protobuf model config adapters. Adds Factory.instantiate(Iterable) since
ConfigExtInfo registrations are not keyed uniquely by type() the way
FactorySpi-based lookups are. Pre-seeds the model-ext schema scaffold in
the engine base schema, mirroring the existing binding-ext convention.

Closes aklivity/zilla#2360

* fix(config): restore no-arg constructor on model config adapters

AvroModelConfigAdapter, JsonModelConfigAdapter, and ProtobufModelConfigAdapter
implement ModelConfigAdapterSpi, which the engine discovers via
ServiceLoader — a mechanism that requires a public no-arg constructor.
Requiring a List<ModelExtInfo> in the sole constructor broke that
reflection-based instantiation path (ServiceConfigurationError at runtime).

Add back a public no-arg constructor that discovers ModelExtInfo providers
itself, matching what ModelInfo.extensions() would compute; the two-arg
constructor remains for ModelInfo.adapter() (which already has the
extensions list) and for tests.

* fix(config): declare uses ModelExtInfo in model conf modules

AvroModelConfigAdapter, JsonModelConfigAdapter, and ProtobufModelConfigAdapter
now call ServiceLoader.load(ModelExtInfo.class) directly from their own
module-info.avro/json/protobuf module, but only engine.conf's module-info
declared `uses ModelExtInfo`. Under the real module path (as opposed to
Surefire's unnamed-module test classpath, where `uses` isn't enforced),
this throws ServiceConfigurationError the moment any binding eagerly
constructs a ModelConfigAdapter — whic